Add/Update PhD ISWD to gr_letter

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title></title>
-    <style type="text/css">/*<![CDATA[*/@media only screen and (max-width: 480px) { table, img { width: 100% !important; height: auto !important; } }/*]]>*/
+    <style type="text/css">@media only screen and (max-width: 480px) { table, img { width: 100% !important; height: auto !important; } }
     </style>
   </head>
   <body>
@@ -55,6 +55,8 @@
             Dr. Stephanie King (<a href="mailto:sking@colled.msstate.edu">sking@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Forestry' %}<br />
             Susan Blanton (<a href="mailto:scb552@msstate.edu">scb552@msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Instruct Sys and Workforce Dev' %}<br />
+            Dr. James Adams (<a href="mailto:jadams@colled.msstate.edu">jadams@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %} Please record the following information, which will be very important throughout your time as an MSU student.
             <ul>
               <li>
