Add comment regarding submit button

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -57,6 +57,10 @@
             Susan Blanton (<a href="mailto:scb552@msstate.edu">scb552@msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Instruct Sys and Workforce Dev' %}<br />
             Dr. James Adams (<a href="mailto:jadams@colled.msstate.edu">jadams@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Conservation Education' %}<br />
+            Dr. Stacy Hines (<a href="mailto:sla335@msstate.edu">sla335@msstate.edu</a>, 662.325.2297) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Sustainable Bioproducts - Grad' %}<br />
+            Jeanie McNeel (<a href="mailto:jam5@msstate.edu">jam5@msstate.edu</a>, 662.325.2119) will be your point of contact and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %} Please record the following information, which will be very important throughout your time as an MSU student.
             <ul>
               <li>
