Add engineering to GR Admit Letter

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -44,7 +44,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Secondary Education' %}<br />
             Dr. Missy Hopper (<a href="mailto:pfh7@colled.msstate.edu">pfh7@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Educational Leadership / School Administration' %}<br />
-            <span style="display: none;">&nbsp;</span>Dr. Paula Tharp (<a href="http://ptharp@colled.msstate.edu">ptharp@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
+            Dr. Paula Tharp (<a href="http://ptharp@colled.msstate.edu">ptharp@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / PhD in Community Co Leadership' %}<br />
             Dr. Stephanie King (<a href="mailto:sking@colled.msstate.edu">sking@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Distance Education' or {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Instructional Design' or {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Multimedia' %}<br />
@@ -61,7 +61,45 @@
             Dr. Stacy Hines (<a href="mailto:sla335@msstate.edu">sla335@msstate.edu</a>, 662.325.2297) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Sustainable Bioproducts - Grad' %}<br />
             Jeanie McNeel (<a href="mailto:jam5@msstate.edu">jam5@msstate.edu</a>, 662.325.2119) will be your point of contact and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
-            {% endif %} Please record the following information, which will be very important throughout your time as an MSU student.
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Engineering / Engineering / General Engineering' or {{gr_aca_int_app}} == 'Master of Engineering / Engineering / Military Engineering' %}<br />
+            Tamra Swann, <a href="mailto:tswann@bagley.msstate.edu">tswann@bagley.msstate.edu</a>>a, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Aerospace Engineering' %}<br />
+            Dr. Mark Janus, <a href="mailto:mark@hpc.msstate.edu">mark@hpc.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Chemical Engineering' %}<br />
+            Dr. Neeraj Rai, <a href="mailto:neerajrai@che.msstate.edu">neerajrai@che.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Civil Engineering' %}<br />
+            Dr. Farshid Vahedifard, <a href="mailto:farshid@cee.msstate.edu">farshid@cee.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Computational Engineering' %}<br />
+            Dr. Manav Bhatia, <a href="mailto:cme-coordinator@hpc.msstate.edu">cme-coordinator@hpc.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Computer Science' or {{gr_aca_int_app}} == 'Master of Science / Computer Science / General Computer Science' or {{gr_aca_int_app}} == 'Master of Science / Computer Science / Research Computer Science'%}<br />
+            Dr. T.J Jankun-Kelly, <a href="mailto:tjk@cse.msstate.edu">tjk@cse.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Cyber Security & Operations / Cyber Defense' or {{gr_aca_int_app}} == 'Master of Science / Cyber Security & Operations / Cyber Operations' %}<br />
+            Dr. T.J Jankun-Kelly, <a href="mailto:tjk@cse.msstate.edu">tjk@cse.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Electrical & Computer Eng' %}<br />
+            Dr. Jenny Q. Du, <a href="mailto:du@ece.msstate.edu">du@ece.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Human Factors & Ergonomics' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Industrial Systems' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Management Systems' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Manufacturing Systems' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Operations Research' %}<br />
+            Dr. Linkan Bian, <a href="mailto:bian@ise.msstate.edu">bian@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Mechanical Engineering' %}<br />
+            Dr. Yucheng Liu, <a href="mailto:liu@me.msstate.edu">liu@me.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Engineering Education' %}<br />
+            Dr. Lesley Strawderman, <a href="mailto:ene-grad-coord@lists.msstate.edu">ene-grad-coord@lists.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Aerospace Engineering' %}<br />
+            Dr. Mark Janus, <a href="mailto:mark@hpc.msstate.edu">mark@hpc.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Chemical Engineering' %}<br />
+            Dr. Neeraj Rai, <a href="mailto:neerajrai@che.msstate.edu">neerajrai@che.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Civil Engineering' %}<br />
+            Dr. Farshid Vahedifard, <a href="mailto:farshid@cee.msstate.edu">farshid@cee.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Computational Engineering' %}<br />
+            Dr. Manav Bhatia, <a href="mailto:cme-coordinator@hpc.msstate.edu">cme-coordinator@hpc.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Computer Science' %}<br />
+            Dr. T.J Jankun-Kelly, <a href="mailto:tjk@cse.msstate.edu">tjk@cse.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Electrical & Computer Eng' %}<br />
+            Dr. Jenny Q. Du, <a href="mailto:du@ece.msstate.edu">du@ece.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Industrial and Systems Eng' %}<br />
+            Dr. Linkan Bian, <a href="mailto:bian@ise.msstate.edu">bian@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Mechanical Engineering' %}<br />
+            Dr. Yucheng Liu, <a href="mailto:liu@me.msstate.edu">liu@me.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            {% endif %}Please record the following information, which will be very important throughout your time as an MSU student.
             <ul>
               <li>
                 Your MSU ID is&nbsp;<strong>{{erpid}}</strong>.
