Update ChemEng grad coordinator

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -66,7 +66,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Aerospace Engineering' %}<br />
             Dr. Mark Janus, <a href="mailto:mark@hpc.msstate.edu">mark@hpc.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Chemical Engineering' %}<br />
-            Dr. Neeraj Rai, <a href="mailto:neerajrai@che.msstate.edu">neerajrai@che.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            Dr. Bill Elmore, <a href="mailto:elmore@che.msstate.edu">elmore@che.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Civil Engineering' %}<br />
             Dr. Farshid Vahedifard, <a href="mailto:farshid@cee.msstate.edu">farshid@cee.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Computational Engineering' %}<br />
@@ -86,7 +86,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Aerospace Engineering' %}<br />
             Dr. Mark Janus, <a href="mailto:mark@hpc.msstate.edu">mark@hpc.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Chemical Engineering' %}<br />
-            Dr. Neeraj Rai, <a href="mailto:neerajrai@che.msstate.edu">neerajrai@che.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            Dr. Bill Elmore, <a href="mailto:elmore@che.msstate.edu">elmore@che.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Civil Engineering' %}<br />
             Dr. Farshid Vahedifard, <a href="mailto:farshid@cee.msstate.edu">farshid@cee.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Computational Engineering' %}<br />
