Update transfer credit form link

--- a/scripts/mailings/ug_letter.html
+++ b/scripts/mailings/ug_letter.html
@@ -29,6 +29,8 @@
     Kali Dunlap (<a href="mailto:k.dunlap@msstate.edu">k.dunlap@msstate.edu</a>) will be your program advisor and will assist you throughout your course of study.&nbsp; Kali will email you within 24-48 hours with more information regarding advising and course registration.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'Educational Psychol (BS)' %}<br />
     Donna Gainer (<a href="mailto:browning@colled.msstate.edu">browning@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study.&nbsp; Donna will email you within 24-48 hours with more information regarding advising and course registration.<br />
+    {% endif %}{% if {{ug_aca_int_app}} == 'Human Development & Family Sci / Child Development (BS)' %}<br />
+    Dr. Julie Parker will be the adviser for the online Bachelor of Science in Human Development and Family Science with a concentration in Child Development. Her email and contact number are <a href="mailto:jparker@humansci.msstate.edu">jparker@humansci.msstate.edu</a>, 662.325.2950.<br />
     {% endif %}<br />
     Please record the following information, which will be very important throughout your time as an MSU student.
     <ul>
