--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -70,7 +70,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Civil Engineering' %}<br />
             Dr. Farshid Vahedifard, <a href="mailto:farshid@cee.msstate.edu">farshid@cee.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Computational Engineering' %}<br />
-            Tamra Swann, <a href="mailto:tswann@bagley.msstate.edu">tswann@bagley.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            Dr. Adrian Sescu, <a href="mailto:as2628@msstate.edu">as2628@msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting them to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Computer Science' or {{gr_aca_int_app}} == 'Master of Science / Computer Science / General Computer Science' or {{gr_aca_int_app}} == 'Master of Science / Computer Science / Research Computer Science'%}<br />
             Dr. T.J Jankun-Kelly, <a href="mailto:tjk@cse.msstate.edu">tjk@cse.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Cyber Security & Operations / Cyber Defense' or {{gr_aca_int_app}} == 'Master of Science / Cyber Security & Operations / Cyber Operations' %}<br />
@@ -90,7 +90,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Civil Engineering' %}<br />
             Dr. Farshid Vahedifard, <a href="mailto:farshid@cee.msstate.edu">farshid@cee.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Computational Engineering' %}<br />
-            Tamra Swann, <a href="mailto:tswann@bagley.msstate.edu">tswann@bagley.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            Dr. Adrian Sescu, <a href="mailto:as2628@msstate.edu">as2628@msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting them to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Computer Science' %}<br />
             Dr. T.J Jankun-Kelly, <a href="mailto:tjk@cse.msstate.edu">tjk@cse.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Electrical & Computer Eng' %}<br />
