Update GR admission mailing

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -56,7 +56,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Forestry' %}<br />
             Susan Blanton (<a href="mailto:scb552@msstate.edu">scb552@msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Instruct Sys and Workforce Dev' %}<br />
-            Dr. James Adams (<a href="mailto:jadams@colled.msstate.edu">jadams@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.<br />
+            Dr. James Adams (<a href="mailto:jadams@colled.msstate.edu">jadams@colled.msstate.edu</a>) is the program coordinator. You will be notified the name of your advisor, who will assist you throughout your course of study. Please wait 24-48 hours before contacting the coordinator to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Conservation Education' %}<br />
             Dr. Stacy Hines (<a href="mailto:sla335@msstate.edu">sla335@msstate.edu</a>, 662.325.2297) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Sustainable Bioproducts - Grad' %}<br />
