Update ISE advisor

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -78,7 +78,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Electrical & Computer Eng' %}<br />
             Dr. Jenny Q. Du, <a href="mailto:du@ece.msstate.edu">du@ece.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Human Factors & Ergonomics' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Industrial Systems' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Management Systems' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Manufacturing Systems' or {{gr_aca_int_app}} == 'Master of Science / Industrial and Systems Eng / Operations Research' %}<br />
-            Dr. Linkan Bian, <a href="mailto:bian@ise.msstate.edu">bian@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            Dr. Mohammad Marufuzzaman, <a href="mailto:maruf@ise.msstate.edu">maruf@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Mechanical Engineering' %}<br />
             Tonya W. Stone, <a href="mailto:tstone@me.msstate.edu">tstone@me.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Engineering Education' %}<br />
@@ -96,7 +96,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Electrical & Computer Eng' %}<br />
             Dr. Jenny Q. Du, <a href="mailto:du@ece.msstate.edu">du@ece.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Industrial and Systems Eng' %}<br />
-            Dr. Linkan Bian, <a href="mailto:bian@ise.msstate.edu">bian@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
+            Dr. Mohammad Marufuzzaman, <a href="mailto:maruf@ise.msstate.edu">maruf@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Mechanical Engineering' %}<br />
             Tonya W. Stone, <a href="mailto:tstone@me.msstate.edu">tstone@me.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}Please record the following information, which will be very important throughout your time as an MSU student.
