Update UG Letter

--- a/scripts/mailings/ug_letter.html
+++ b/scripts/mailings/ug_letter.html
@@ -22,7 +22,7 @@
     {% endif %}{% if {{ug_aca_int_app}} == 'Elementary Education / Early Childhood (BS)' or {{ug_aca_int_app}} == 'Elementary Education / Middle School (BS)' %}<br />
     Michelle Gaither, <a href="mailto:mgaither@colled.msstate.edu">mgaither@colled.msstate.edu</a>, is the Elementary Education program advisor and will assist you throughout your course of study.&nbsp; Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'Industrial Tech / Industrial Automation (BS)' or {{ug_aca_int_app}} == 'Industrial Tech / Manufacturing & Maintenance (BS)' %}<br />
-    Dr. Swapnil Patole, <a href="mailto:spatole@colled.msstate.edu">spatole@colled.msstate.edu</a>, is the program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.<br />
+    Lara Threet, <a href="mailto:lthreet@colled.msstate.edu">lthreet@colled.msstate.edu</a>, is the program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'History (BA)' %}<br />
     Please contact Joy Bailey (<a href="mailto:joy.bailey@msstate.edu" href-="">joy.bailey@msstate.edu</a>) if you need further assistance.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'Applied Science (BAS)' %}<br />
