Fixed issue with Slate UG Letter on Comm Plan site

--- a/scripts/mailings/ug_letter.html
+++ b/scripts/mailings/ug_letter.html
@@ -44,7 +44,7 @@
         Your MSU Email is {{netid}}@msstate.edu.
       </li>
     </ul>
-    Please follow these <u>three important steps</u> as soon as possible. Instructions for these steps can be found in <a href="https://online.msstate.edu/files/pdf/MSU-Registration-Information-2019.pdf">this PDF document</a>.
+    Please follow these <u>three important steps</u> as soon as possible. Instructions for these steps can be found in <a href="https://www.online.msstate.edu/sites/www.online.msstate.edu/files/pdf/MSU_Registration_Information.pdf">this PDF document</a>.
 
     <ol>
       <li>
